<SVN message originally empty>
Exported from SVN r10661

--- a/products/oeapi/branches/symnektra/libsymnektra/libsymnektra.vcproj
+++ b/products/oeapi/branches/symnektra/libsymnektra/libsymnektra.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../oeapiinitcom;../plugin/oestore;../plugin/oecom"
+				AdditionalIncludeDirectories="../oeapiinitcom;../plugin/oestore;../plugin/oecom;&quot;$(SolutionDir)oeapicommon&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
