--- a/products/oeapi/branches/symnektra/oeapicommon/oeapicommon.vcproj
+++ b/products/oeapi/branches/symnektra/oeapicommon/oeapicommon.vcproj
@@ -177,6 +177,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\NktApiKey.h"
+				>
+			</File>
+			<File
 				RelativePath=".\NktMutex.cpp"
 				>
 			</File>
