--- a/products/oeapi/branches/symnektra/symdemo/symdemo.vcproj
+++ b/products/oeapi/branches/symnektra/symdemo/symdemo.vcproj
@@ -66,7 +66,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="htmlhelp.lib"
+				AdditionalDependencies="Comctl32.lib"
 				OutputFile="..\$(OutDir)\$(ProjectName).dll"
 				ModuleDefinitionFile="symdemo.def"
 				GenerateDebugInformation="true"
@@ -149,7 +149,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="htmlhelp.lib"
+				AdditionalDependencies="Comctl32.lib"
 				ModuleDefinitionFile="symdemo.def"
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -191,11 +191,23 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\CFolderListDlg.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\CSymDemo.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\symdemo.cpp"
 				>
 			</File>
 			<File
 				RelativePath=".\symdemo.def"
+				>
+			</File>
+			<File
+				RelativePath=".\symdemo.rc"
 				>
 			</File>
 		</Filter>
@@ -204,6 +216,18 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\CFolderListDlg.h"
+				>
+			</File>
+			<File
+				RelativePath=".\CSymDemo.h"
+				>
+			</File>
+			<File
+				RelativePath=".\resource.h"
+				>
+			</File>
 			<File
 				RelativePath=".\stdafx.h"
 				>
