--- a/products/oeapi/branches/symnektra/libsymnektra/libsymnektra.vcproj
+++ b/products/oeapi/branches/symnektra/libsymnektra/libsymnektra.vcproj
@@ -104,7 +104,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="../oeapiinitcom;../plugin/oestore;../plugin/oecom"
+				AdditionalIncludeDirectories="../oeapiinitcom;../plugin/oestore;../plugin/oecom;&quot;$(SolutionDir)oeapicommon&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
