--- a/products/oeapi/branches/symnektra/libsymnektra/libsymnektra.vcproj
+++ b/products/oeapi/branches/symnektra/libsymnektra/libsymnektra.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../oeapiinitcom;../plugin/oestore;../plugin/oecom;&quot;$(SolutionDir)oeapicommon&quot;"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)oeapiinitcom&quot;;&quot;$(SolutionDir)oestore&quot;;&quot;$(SolutionDir)oecom&quot;;&quot;$(SolutionDir)oeapicommon&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -104,7 +104,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="../oeapiinitcom;../plugin/oestore;../plugin/oecom;&quot;$(SolutionDir)oeapicommon&quot;"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)oeapiinitcom&quot;;&quot;$(SolutionDir)oestore&quot;;&quot;$(SolutionDir)oecom&quot;;&quot;$(SolutionDir)oeapicommon&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
