--- a/products/oeapi/demos/trunk/c# dll/Plugin.csproj
+++ b/products/oeapi/demos/trunk/c# dll/Plugin.csproj
@@ -1,7 +1,7 @@
 ﻿<Project DefaultTargets="Build" ToolsVersion="3.5" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <ProjectType>Local</ProjectType>
-    <ProductVersion>8.0.30729</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{7FB9AD1A-2654-4DC2-840B-2CABA9327B3B}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -96,6 +96,7 @@
       <VersionMinor>6</VersionMinor>
       <Lcid>0</Lcid>
       <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
     </COMReference>
     <COMReference Include="OEAPIINITCOM">
       <Guid>{A4885815-462D-4D7B-895C-78FAE55AB177}</Guid>
@@ -103,6 +104,7 @@
       <VersionMinor>3</VersionMinor>
       <Lcid>0</Lcid>
       <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
     </COMReference>
     <COMReference Include="OESTORE">
       <Guid>{A684B0CB-4EA0-4C72-8AEF-3C98D767FAD2}</Guid>
@@ -110,6 +112,7 @@
       <VersionMinor>5</VersionMinor>
       <Lcid>0</Lcid>
       <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
     </COMReference>
     <COMReference Include="stdole">
       <Guid>{00020430-0000-0000-C000-000000000046}</Guid>
