<SVN message originally empty>
Exported from SVN r10859

--- a/products/oeapi/trunk/oecom/oecom.vcproj
+++ b/products/oeapi/trunk/oecom/oecom.vcproj
@@ -374,7 +374,7 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="Release|Win32"
+			Name="Enterprise|Win32"
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
@@ -460,7 +460,7 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="Release|x64"
+			Name="Enterprise|x64"
 			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
 			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="2"
@@ -788,7 +788,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Release|Win32"
+					Name="Enterprise|Win32"
 					>
 					<Tool
 						Name="VCCustomBuildTool"
@@ -798,7 +798,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Release|x64"
+					Name="Enterprise|x64"
 					>
 					<Tool
 						Name="VCCustomBuildTool"
