--- a/products/oeapi/trunk/oeapiinitcom/oeapiinitcom.vcproj
+++ b/products/oeapi/trunk/oeapiinitcom/oeapiinitcom.vcproj
@@ -348,7 +348,7 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="Release|Win32"
+			Name="Enterprise|Win32"
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
@@ -428,7 +428,7 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="Release|x64"
+			Name="Enterprise|x64"
 			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
 			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="2"
@@ -725,7 +725,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Release|Win32"
+					Name="Enterprise|Win32"
 					>
 					<Tool
 						Name="VCCustomBuildTool"
@@ -735,7 +735,7 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Release|x64"
+					Name="Enterprise|x64"
 					>
 					<Tool
 						Name="VCCustomBuildTool"
