<SVN message originally empty>
Exported from SVN r10866

--- a/products/oeapi/demos/trunk/c# dll/Plugin.csproj
+++ b/products/oeapi/demos/trunk/c# dll/Plugin.csproj
@@ -10,7 +10,7 @@
     </ApplicationIcon>
     <AssemblyKeyContainerName>
     </AssemblyKeyContainerName>
-    <AssemblyName>Plugin</AssemblyName>
+    <AssemblyName>OeapiPlugin</AssemblyName>
     <AssemblyOriginatorKeyFile>
     </AssemblyOriginatorKeyFile>
     <DefaultClientScript>JScript</DefaultClientScript>
@@ -18,7 +18,7 @@
     <DefaultTargetSchema>IE50</DefaultTargetSchema>
     <DelaySign>false</DelaySign>
     <OutputType>Library</OutputType>
-    <RootNamespace>Plugin</RootNamespace>
+    <RootNamespace>OeapiPlugin</RootNamespace>
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
     <StartupObject>
     </StartupObject>
