--- a/products/oeapi/demos/trunk/vc/demo.vcproj
+++ b/products/oeapi/demos/trunk/vc/demo.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="demo"
+	Name="exedemo"
 	ProjectGUID="{C6C51796-F27D-4822-AEEC-76D1143C74EE}"
 	RootNamespace="demo"
 	Keyword="MFCProj"
@@ -18,8 +18,8 @@
 	<Configurations>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			OutputDirectory="Release"
+			IntermediateDirectory="Release"
 			ConfigurationType="1"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			UseOfMFC="0"
@@ -96,8 +96,8 @@
 		</Configuration>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			OutputDirectory="Debug"
+			IntermediateDirectory="Debug"
 			ConfigurationType="1"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			UseOfMFC="0"
@@ -423,19 +423,11 @@
 			Filter="ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe"
 			>
 			<File
-				RelativePath="res\demo.ico"
-				>
-			</File>
-			<File
 				RelativePath="res\demo.rc2"
 				>
 			</File>
 			<File
 				RelativePath="res\Oeapi.ico"
-				>
-			</File>
-			<File
-				RelativePath="..\..\icon\oeapi.ico"
 				>
 			</File>
 		</Filter>
