--- a/products/oeapi/trunk/oeapiinitcom/oeapiinitcom.vcproj
+++ b/products/oeapi/trunk/oeapiinitcom/oeapiinitcom.vcproj
@@ -54,6 +54,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="$(SolutionDir)oeapicommon"
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_USRDLL;STANDARD_VERSION;_USRDLL;WINVER=0x0500;_WIN32_WINNT=0x0500;"
+				DebugInformationFormat="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -69,6 +70,7 @@
 				Name="VCLinkerTool"
 				RegisterOutput="true"
 				ModuleDefinitionFile="./oeapiinitcom.def"
+				GenerateDebugInformation="true"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
 				TargetMachine="1"
@@ -385,6 +387,7 @@
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_USRDLL;ENTERPRISE_VERSION;_USRDLL;WINVER=0x0500;_WIN32_WINNT=0x0500;"
 				RuntimeLibrary="0"
 				WarningLevel="3"
+				DebugInformationFormat="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -400,6 +403,7 @@
 				Name="VCLinkerTool"
 				RegisterOutput="true"
 				ModuleDefinitionFile="./oeapiinitcom.def"
+				GenerateDebugInformation="true"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
 				TargetMachine="1"
@@ -541,6 +545,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="$(SolutionDir)oeapicommon"
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_USRDLL;ENTERPRISE_VERSION;EVALUATION_VERSION;_USRDLL;WINVER=0x0500;_WIN32_WINNT=0x0500;"
+				DebugInformationFormat="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -556,6 +561,7 @@
 				Name="VCLinkerTool"
 				RegisterOutput="true"
 				ModuleDefinitionFile="./oeapiinitcom.def"
+				GenerateDebugInformation="true"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
 				TargetMachine="1"
