--- a/products/oeapi/trunk/oestore/oestore.vcproj
+++ b/products/oeapi/trunk/oestore/oestore.vcproj
@@ -235,6 +235,7 @@
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_USRDLL;ENTERPRISE_VERSION;_USRDLL;WINVER=0x0500;_WIN32_WINNT=0x0500;"
 				RuntimeLibrary="0"
 				WarningLevel="3"
+				DebugInformationFormat="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -252,6 +253,7 @@
 				RegisterOutput="true"
 				AdditionalDependencies="psapi.lib"
 				ModuleDefinitionFile="./oestore.def"
+				GenerateDebugInformation="true"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
@@ -398,6 +400,7 @@
 				AdditionalIncludeDirectories="$(SolutionDir)oeapicommon"
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_USRDLL;STANDARD_VERSION;_USRDLL;WINVER=0x0500;_WIN32_WINNT=0x0500;"
 				WarningLevel="3"
+				DebugInformationFormat="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -415,6 +418,7 @@
 				RegisterOutput="true"
 				AdditionalDependencies="psapi.lib"
 				ModuleDefinitionFile="./oestore.def"
+				GenerateDebugInformation="true"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
@@ -561,6 +565,7 @@
 				AdditionalIncludeDirectories="$(SolutionDir)oeapicommon"
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_USRDLL;ENTERPRISE_VERSION;EVALUATION_VERSION;_USRDLL;WINVER=0x0500;_WIN32_WINNT=0x0500;"
 				WarningLevel="3"
+				DebugInformationFormat="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -578,6 +583,7 @@
 				RegisterOutput="true"
 				AdditionalDependencies="psapi.lib"
 				ModuleDefinitionFile="./oestore.def"
+				GenerateDebugInformation="true"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
