--- a/products/oeapi/trunk/oestore/oestore.vcproj
+++ b/products/oeapi/trunk/oestore/oestore.vcproj
@@ -537,6 +537,10 @@
 			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
 			>
 			<File
+				RelativePath=".\accmgr.cpp"
+				>
+			</File>
+			<File
 				RelativePath="folder.cpp"
 				>
 			</File>
@@ -645,6 +649,10 @@
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl"
 			>
+			<File
+				RelativePath=".\accmgr.h"
+				>
+			</File>
 			<File
 				RelativePath="folder.h"
 				>
