<SVN message originally empty>
Exported from SVN r17325

--- a/products/oeapi/demos/trunk/toolbar/oeapi_sample.rc
+++ b/products/oeapi/demos/trunk/toolbar/oeapi_sample.rc
@@ -99,12 +99,11 @@ IDR_ATL_ADDIN           REGISTRY                "atl_addin.rgs"
 // Dialog
 //
 
-IDD_TEXTDISPLAY DIALOGEX 0, 0, 316, 180
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_SYSMENU
+IDD_TEXTDISPLAY DIALOGEX 0, 0, 317, 180
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,259,159,50,14
-    EDITTEXT        IDC_TEXTEDIT,7,7,302,149,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY,WS_EX_DLGMODALFRAME
+    EDITTEXT        IDC_TEXTEDIT,7,7,303,166,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL,WS_EX_DLGMODALFRAME
 END
 
 
@@ -119,7 +118,7 @@ BEGIN
     IDD_TEXTDISPLAY, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 309
+        RIGHTMARGIN, 310
         TOPMARGIN, 7
         BOTTOMMARGIN, 173
     END
