--- a/products/oeapi/demos/trunk/toolbar/oeapi_sample.vcproj
+++ b/products/oeapi/demos/trunk/toolbar/oeapi_sample.vcproj
@@ -252,6 +252,10 @@
 					/>
 				</FileConfiguration>
 			</File>
+			<File
+				RelativePath=".\textdlg.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -268,6 +272,10 @@
 			</File>
 			<File
 				RelativePath=".\stdafx.h"
+				>
+			</File>
+			<File
+				RelativePath=".\textdlg.h"
 				>
 			</File>
 		</Filter>
