- 3.6.0 version patch - Installer fixes
Exported from SVN r18239

--- a/products/oeapi/trunk/makefile
+++ b/products/oeapi/trunk/makefile
@@ -16,6 +16,12 @@ installer-all: installer-evaluation installer-standard  installer-standard-sourc
 build-common:
 	devenv oeapi.sln /Build "$(BUILDTYPE)|Win32"
 	devenv demo\demos.sln /Build "Release|Win32"
+	tools\sign\signfile.bat $(BUILDTYPE)\oeapiinitcom.dll
+	tools\sign\signfile.bat $(BUILDTYPE)\oecom.dll
+	tools\sign\signfile.bat $(BUILDTYPE)\oestore.dll
+	tools\sign\signfile.bat Release\oehook.dll
+	tools\sign\signfile.bat Release\launcher.exe
+
 
 build-debug:
 	set BUILDTYPE=Debug
